# adventofcode2023

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  run_all.sh
01/: 01.sh
02/: 02.sh
03/: 03.cpp  CMakeLists.txt
04/: 04.cpp
05/: 05.cpp
06/: 06.cpp
07/: 07.cpp
08/: 08.cpp
09/: 09.cpp
10/: 10.cpp
11/: 11.cpp
2023/: CMakeLists.txt  run_all.sh
2023/01/: 01.sh
2023/04/: 04.cpp
2023/08/: 08.cpp
2023/09/: 09.cpp
2023/11/: 11.cpp
2024/: CMakeLists.txt  common.hpp
2024/01/: 01.cpp
2024/02/: 02.cpp
2024/03/: 03.cpp
2024/04/: 04.cpp  CMakeLists.txt
2024/05/: 05.cpp
2024/06/: 06.cpp
2024/07/: 07.cpp
2024/08/: 08.cpp
common/: common.hpp  common.sh
